--- a/client/src/scss/_mixins.scss
+++ b/client/src/scss/_mixins.scss
@@ -1,8 +1,9 @@
 @keyframes glow {
-    from {
-      text-shadow: none;
-    }
-    to {
-      text-shadow: 0 0 10px #fffb93, 0 0 10px #fffb93, 0 0 20px #fcff3e, 0 0 40px #fcff3e, 0 0 500px #fcff3e;
-    }
+  from {
+    text-shadow: none;
   }
+  to {
+    text-shadow: 0 0 5px #fffb93, 0 0 10px #fffb93, 0 0 15px #fcff3e,
+      0 0 20px #fcff3e, 0 0 20px #fcff3e;
+  }
+}
