adding in Bottom Navigation ttabs component and syncing with currentPeriod in state

--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -17,3 +17,6 @@ $warning: #ffa726;
 
 
 $background-color-dark: #212121;
+$primary-dark: #48224f;
+$secondary-dark: #826316;
+$accent-dark: #354d1a;
