moving modal functions / buttons / elements / etc into own component

--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -9,7 +9,7 @@ $border-color-primary: #56555e;
 // veutify theme colors:
 $primary: #AB47BC;
 $secondary: #fbc02d;
-$accent: #8bc34a;
+$accent: #5d915b;
 $error: #ef5350;
 $info: #4fc3f7;
 $success: #5d915b;
